--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,23 @@ body{
   margin: 30px auto;
   width: 350px;
 }
+
+.horizontal-menu{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+  text-align: center;
+
+}
+.horizontal-menu li{
+  display: inline-block;
+}
+
+.horizontal-menu a{
+  color: aliceblue;
+  text-decoration: none;
+  padding: 16px;
+  display: block;
+}
